welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: not found: value c
    if (b<13 & b>19 & c<13 & c>19) {
                      ^loneTeen:3: error: not found: value c
    if (b<13 & b>19 & c<13 & c>19) {
                             ^loneTeen:7: error: not found: value c
    if (a<13 & a>19 & c<13 & c>19) {
                      ^loneTeen:7: error: not found: value c
    if (a<13 & a>19 & c<13 & c>19) {
                             ^loneTeen:10: error: not found: value c
  } else if (c>=13 & c<=19) {
             ^loneTeen:10: error: not found: value c
  } else if (c>=13 & c<=19) {
                     ^loneTeen:10: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (c>=13 & c<=19) {
         ^