welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
  if (a>=13 & a<=19) {
    if (b<13 & b>19 & c<13 & c>19) {
      return true
    } else return false
  }else if (b>=13 & b<=19) {
    if (a<13 & a>19 & c<13 & c>19) {
      return true
    } else return false
  } else if (c>=13 & c<=19) {
    if (b<13 & b>19 & a<13 & a>19) {
      return true
    } else return false
  }
}